--- a/app/src/main/res/layout/fragment_events_screen.xml
+++ b/app/src/main/res/layout/fragment_events_screen.xml
@@ -84,8 +84,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:nestedScrollingEnabled="false"
-                        android:paddingTop="12dp" />
-                        //tools:listitem="@layout/item_event" />
+                        android:paddingTop="12dp"
+                        tools:listitem="@layout/item_event" />
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
