Added playdate button to petprofileview, Added layout and .kt for schedule playdate, Added privacy status, Added Calendar Availability, Added ability to choose time to meet, Added map and search button (will add functions later) Added few stock activites with option to create own, Added Create playdate button. Will update with pulling info for firebase and all buttons functioning once other aspects of app are finished

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,6 @@
     <color name="pawty_blue_dark">#0B4365</color>
     <color name="text_btn_color">#7D7878</color>
     <color name="pawty_grey">#7D7878</color>
+    <color name="pawty_pill_blue">#7DB5CF</color>
 
 </resources>
