--- a/app/src/main/res/layout/fragment_pet_profile_view.xml
+++ b/app/src/main/res/layout/fragment_pet_profile_view.xml
@@ -29,15 +29,14 @@
 
         <LinearLayout
             android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@color/pawty_cream"
             android:orientation="vertical"
             android:padding="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logo2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/logo2">
+            app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
                 android:id="@+id/age"
@@ -111,19 +110,42 @@
                 android:textColor="@color/pawty_text_primary"
                 android:textSize="20sp" />
 
-
         </LinearLayout>
 
+        <!-- Schedule playdate button under profile info -->
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSchedulePlaydate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginTop="16dp"
+            android:text="Schedule Playdate"
+            android:textColor="@android:color/white"
+            android:fontFamily="@font/marcellus"
+            app:cornerRadius="24dp"
+            app:icon="@drawable/ic_calendar"
+            app:iconTint="@null"
+            app:iconPadding="8dp"
+            app:iconGravity="textStart"
+            app:backgroundTint="@color/pawty_pill_blue"
+            app:layout_constraintTop_toBottomOf="@id/linearLayout2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <!-- Invite to Pawty button below schedule, anchored to bottom -->
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="24dp"
             android:text="INVITE TO PAWTY!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:fontFamily="@font/marcellus"
+            app:layout_constraintTop_toBottomOf="@id/btnSchedulePlaydate"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
-
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
